--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "code2doc",
-  "version": "0.1.0",
+  "version": "0.1.4",
   "description": "An useful tool for transfer code to document.",
-  "main": "bin/code2doc.js",
-  "bin": {
-    "code2doc": "code2doc.js"
-  },
+  "main": "index.js",
   "directories": {
     "test": "test"
   },
@@ -15,12 +12,15 @@
     "swig": "^1.4.2"
   },
   "devDependencies": {},
+  "bin": {
+    "code2doc": "./bin/code2doc"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/coderq/code2doc.git"
+    "url": "https://github.com/coderq/code2doc.git"
   },
   "keywords": [
     "code2doc"
@@ -30,5 +30,5 @@
   "bugs": {
     "url": "https://github.com/coderq/code2doc/issues"
   },
-  "homepage": "https://github.com/coderq/code2doc#readme"
+  "homepage": "https://github.com/coderq/code2doc"
 }
